<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ox5un5h1n3.zulo.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.ox5un5h1n3.zulo.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.ox5un5h1n3.zulo.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.ox5un5h1n3.zulo.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

<!--    <fragment-->
<!--        android:id="@+id/navigation_balance"-->
<!--        android:name="com.hci3.aris.ui.balance.BalanceFragment"-->
<!--        android:label="@string/title_balance"-->
<!--        tools:layout="@layout/fragment_balance" />-->

<!--    <navigation-->
<!--        android:id="@+id/navigation_grades_graph"-->
<!--        app:startDestination="@id/navigation_grades">-->

<!--        <fragment-->
<!--            android:id="@+id/navigation_grades"-->
<!--            android:name="com.hci3.aris.ui.grades.GradesFragment"-->
<!--            android:label="@string/title_grades"-->
<!--            tools:layout="@layout/fragment_grades">-->
<!--            <action-->
<!--                android:id="@+id/action_navigation_grades_to_subnav_semester"-->
<!--                app:destination="@id/subnav_semester"-->
<!--                app:enterAnim="@anim/nav_default_enter_anim"-->
<!--                app:exitAnim="@anim/nav_default_exit_anim"-->
<!--                app:popEnterAnim="@anim/nav_default_pop_enter_anim"-->
<!--                app:popExitAnim="@anim/nav_default_pop_exit_anim" />-->
<!--            <action-->
<!--                android:id="@+id/action_navigation_grades_to_subnav_grade_details_list"-->
<!--                app:destination="@id/subnav_grade_details_list"-->
<!--                app:enterAnim="@anim/nav_default_enter_anim"-->
<!--                app:exitAnim="@anim/nav_default_exit_anim"-->
<!--                app:popEnterAnim="@anim/nav_default_pop_enter_anim"-->
<!--                app:popExitAnim="@anim/nav_default_pop_exit_anim" />-->
<!--        </fragment>-->

<!--        <fragment-->
<!--            android:id="@+id/subnav_semester"-->
<!--            android:name="com.hci3.aris.ui.semester.SemesterFragment"-->
<!--            android:label="Semesters"-->
<!--            tools:layout="@layout/fragment_semester">-->
<!--            <action-->
<!--                android:id="@+id/action_subnav_semester_to_subnav_grade_list"-->
<!--                app:destination="@id/subnav_grade_list"-->
<!--                app:enterAnim="@anim/nav_default_enter_anim"-->
<!--                app:exitAnim="@anim/nav_default_exit_anim"-->
<!--                app:popEnterAnim="@anim/nav_default_pop_enter_anim"-->
<!--                app:popExitAnim="@anim/nav_default_pop_exit_anim" />-->
<!--        </fragment>-->

<!--        <fragment-->
<!--            android:id="@+id/subnav_grade_list"-->
<!--            android:name="com.hci3.aris.ui.semester.SemesterGradesFragment"-->
<!--            android:label="Semestral Grades"-->
<!--            tools:layout="@layout/fragment_grades_list">-->
<!--            <action-->
<!--                android:id="@+id/action_navigation_grades_to_subnav_grade_details_list"-->
<!--                app:destination="@id/subnav_grade_details_list"-->
<!--                app:enterAnim="@anim/nav_default_enter_anim"-->
<!--                app:exitAnim="@anim/nav_default_exit_anim"-->
<!--                app:popEnterAnim="@anim/nav_default_pop_enter_anim"-->
<!--                app:popExitAnim="@anim/nav_default_pop_exit_anim" />-->
<!--        </fragment>-->

<!--        <fragment-->
<!--            android:id="@+id/subnav_grade_details_list"-->
<!--            android:name="com.hci3.aris.ui.grades.GradesDetailsFragment"-->
<!--            android:label="Grade Details"-->
<!--            tools:layout="@layout/fragment_grade_details_tabs" />-->

<!--    </navigation>-->

<!--    <navigation-->
<!--        android:id="@+id/navigation_schedule_graph"-->
<!--        app:startDestination="@id/navigation_schedule">-->

<!--        <fragment-->
<!--            android:id="@+id/navigation_schedule"-->
<!--            android:name="com.hci3.aris.ui.schedule.ScheduleFragment"-->
<!--            android:label="@string/title_schedule"-->
<!--            tools:layout="@layout/fragment_schedule">-->
<!--            <action-->
<!--                android:id="@+id/action_navigation_schedule_main_to_subnav_schedule_plot"-->
<!--                app:destination="@id/subnav_schedule_plot"-->
<!--                app:enterAnim="@anim/nav_default_enter_anim"-->
<!--                app:exitAnim="@anim/nav_default_exit_anim"-->
<!--                app:popEnterAnim="@anim/nav_default_pop_enter_anim"-->
<!--                app:popExitAnim="@anim/nav_default_pop_exit_anim" />-->
<!--        </fragment>-->

<!--        <fragment-->
<!--            android:id="@+id/subnav_schedule_plot"-->
<!--            android:name="com.hci3.aris.ui.schedule.SchedulePlotFragment"-->
<!--            android:label="Schedule Plot"-->
<!--            tools:layout="@layout/fragment_schedule_plot" />-->
<!--    </navigation>-->

</navigation>